# Blog-deployment

./: main.py  pyproject.toml  requirements.txt
templates/: post.html
