[project]
name = "day-71-deployment"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "bootstrap-flask==2.5.0",
    "flask==3.1.3",
    "flask-ckeditor==1.0.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "gunicorn==25.1.0",
    "psycopg-binary==3.3.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.1.0b1",
    "werkzeug==3.1.6",
    "wtforms==3.2.1",
]
